--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Micro+5&family=Orbitron:wght@900&display=swap');
+
 body {
     margin: 0;
     padding: 0;
@@ -8,7 +10,7 @@ body {
     min-height: 100vh;
     background-color: #03051e;
     color: #ffffff55;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .container {
@@ -22,11 +24,16 @@ header {
 }
 
 h1 {
-    color: #0c30d08a;
+    color: #156ada34;
+    font-size: 10ch;
+    font-family: "Micro 5", sans-serif;
 }
 
 main {
     color: #156ada81;
+    font-family: "Micro 5", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 p {
@@ -37,7 +44,7 @@ p {
     display: inline-block;
     padding: 15px 65px;
     background-color: #007bff11;
-    color: #b1364950;
+    color: #cc4d6066;
     text-decoration: none;
     border-radius: 5px;
     transition: background-color 0.3s;
@@ -67,7 +74,7 @@ footer p {
 }
 
 .all-rights-reserved {
-    color: #888976;
+    color: #4d4d4d;
     font-size: x-small;
     position: fixed;
     bottom: 0;
