--- a/portfolio.css
+++ b/portfolio.css
@@ -15,44 +15,52 @@ header {
 
 h1 {
     font-size-adjust: calc(10%);
-    color: #980abbcc;
+    color: #2b61b8cc;
     font-family: oxanium;
 }
 
-/* Services section */
-.services {
-    max-width: 800px;
-    margin: 50px auto;
-    text-align: left;
-    color: #0f52abd2;
-}
-
-.services h2 {
-    font-family: "Micro 5", sans-serif;
-    font-size: 4ch;
-    margin-bottom: 20px;
-    text-align: center;
-    color: #101fc8a2;
-}
-
-.services ul {
-    list-style: none;
-    padding: 0;
-}
-
-.services ul li {
-    margin-bottom: 15px;
-    font-size: 1.3rem;
+.fade-carousel {
     position: relative;
-    padding-left: 25px;
+    width: 300px;
+    height: 400px;
+    margin: 80px auto;
+    overflow: hidden;
+    border-radius: 20px;
+    box-shadow: 0 0 20px #101fc833;
+    cursor: pointer;
 }
 
-.services ul li::before {
-    content: "•";
-    position: absolute;
-    left: 0;
-    color: #101fc8a2;
+.carousel-track {
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
+
+.carousel-track img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+}
+
+.carousel-track img.active {
+    opacity: 1;
+}
+
+/* Mobile responsive */
+@media (max-width: 600px) {
+    .fade-carousel {
+        width: 90%;
+        height: 300px;
+    }
+}
+
+
+
 
 /* Button */
 .center {
@@ -64,15 +72,15 @@ h1 {
     margin-top: 40px;
     padding: 10px 30px;
     background-color: #007bff22;
-    color: #cd38b266;
+    color: #de47c282;
     border-radius: 5px;
     text-decoration: none;
     transition: background-color 0.3s, color 0.3s;
 }
 
 .btn-back:hover {
-    background-color: #0056b3;
-    color: #20a9f9;
+    background-color: #0057b342;
+    color: #20a9f9a2;
 }
 
 /* Footer */
